
subdir('bumps')
subdir('matching')
subdir('time_dep')
subdir('bunch_utils')
subdir('parsers')
subdir('fieldtracker')
subdir('teapot_base')
subdir('bunch_generators')
subdir('utils')
subdir('impedances')
subdir('lattice')
subdir('rf_cavities')
subdir('injection')
subdir('aperture')
subdir('py_linac')
subdir('kickernodes')
subdir('orbit_correction')
subdir('diagnostics')
subdir('collimation')
subdir('foils')
subdir('space_charge')
subdir('errors')
subdir('matrix_lattice')
subdir('teapot')


py_sources = files([
    '__init__.py'
])

python.install_sources(
    py_sources,
    subdir: 'orbit',
    # pure: true,
)        
