


py_sources = files([
    'LinacFieldOverlappingNodes.py',
	'LinacAccLatticeLib.py',
	'LinacTransportMatrixGenNodes.py',
	'LinacAccNodes.py',
	'__init__.py',
	'LinacAccLatticeFunc.py',
	'LinacApertureNodes.py',
	'LinacDiagnosticsNodes.py',
	'LinacRfGapNodes.py'
])

python.install_sources(
    py_sources,
    subdir: 'orbit/py_linac/lattice',
    # pure: true,
)        
