


py_sources = files([
    'rf_models_modifications_lib.py',
	'apertures_additions_lib.py',
	'__init__.py',
	'sns_aperture_additions.py',
	'rf_quad_overlap_modifications_lib.py',
	'quad_overlap_modifications_lib.py',
	'errors_modifications_lib.py'
])

python.install_sources(
    py_sources,
    subdir: 'orbit/py_linac/lattice_modifications',
    # pure: true,
)        
